Fixes z-index for invisible-layer

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -152,7 +152,7 @@ html, body, div[ui-view]          { height: 100%; }
 .full-height                      { height: 100%; }
 
 // HEADER
-header.top                        { background: $beige; border-bottom: 1px solid $lightgray; padding: 10px 20px; position: fixed; transition: width 0.5s ease; top: 0; width: calc(100% - 240px); z-index: 10;
+header.top                        { background: $beige; border-bottom: 1px solid $lightgray; padding: 10px 20px; position: fixed; transition: width 0.5s ease; top: 0; width: calc(100% - 240px); z-index: 50;
   &.expanded                      { width: 100%; }
   h1                              { color: $red; font: 300 24px $title-font; float: left; margin: 0; text-align: left; }
   .hamburger                      { color: $darkgray; float: left; padding: 10px; border-right: 1px solid $lightgray; font-size: 28px; margin: -10px 20px -10px -20px; padding: 5px 10px; }
@@ -218,6 +218,12 @@ form.custom-form                  {
     }
   }
 }
+.filter                           { display: inline; position: relative;
+  & > div                         { background: $beige; border: 1px solid $lightgray; border-radius: 3px; padding: 10px; position: absolute; top: 25px; z-index: 50; }
+  i.filtered                      { color: $red; }
+}
+.fa-sort                          { color: $lightgray2; }
+.sortorder                        { vertical-align: baseline; }
 
 // REPLACES TABLES
 .table                            { display: table;
